--- a/Assignment 2.5
+++ b/Assignment 2.5
@@ -1,24 +1,55 @@
 import java.util.Scanner;
-public class JavaProgram
+public class Calculator
 {
-    public static void main(String args[])
-  {
-    int first, second, add, subtract, multiply;
-    float devide;
-    Scanner scanner = new Scanner(System.in);
+public static void main(String[] args) {
+     Scanner scanner = new Scanner(System.in);
+int choice;
+do 
+{
+System.out.println("Simple Calculator");
+System.out.println("1. Addition");
+System.out.println("2. Subtraction");
+System.out.println("3. Multiplication");
+System.out.println("4. Division"); System.out.println("5. Exit");
+System.out.print("Enter your choice: ");
+choice = scanner.nextInt();
+if (choice >= 1 && choice <= 4)
+{
+System.out.print("Enter first number: ");
+double num1 =
+scanner.nextDouble();
+System.out.print("Enter second number: ");
+double num2 = scanner.nextDouble();
+switch (choice)
+{
+case 1:
+System.out.println("Result: "+ (num1 + num2));
+break;
+case 2:
+System.out.println("Result: "+ (num1 - num2));
+break;
+case 3:
+System.out.println("Result: "+ (num1 * num2));
+break;
+case 4:
+if (num2 != 0)
+{
+System.out.println("Result:" + (num1 / num2));
+} 
+else 
+{ System.out.println("Error! Division by zero is not allowed.");
+}
+break;
 
-    System.out.print("Enter Two Numbers : ");
-    first = scanner.nextInt();
-    second = scanner.nextInt();
+}
+} else if (choice != 5)
+{
 
-    add = first + second;
-    subtract = first - second;
-    multiply = first * second;
-    devide = (float) first / second;
+System.out.println("Invalid choice! Please choose again.");
+}
+}
+while (choice != 5);
 
-    System.out.println("Sum = " + add);
-    System.out.println("subtraction = " + subtract);
-    System.out.println("Multiplication = " + multiply);
-    System.out.println("Division = " + devide);
-  }
+scanner.close();
+}
 }
